[Update] Admin_Zone Topbar + link fixes + other minor fixes

--- a/app/views/admin/ads/index.html.erb
+++ b/app/views/admin/ads/index.html.erb
@@ -15,7 +15,7 @@
           <th>Categoria</th>
           <th>Data de expiração</th>
           <th>Local</th>
-          <th>Activo?</th>
+          <th>Activo</th>
           <th>Cidade</th>
           <th>User_ID / Nome</th>
           <th></th>
