--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -34,7 +34,7 @@
         <td><%= user.email %></td>
         <td><%= user.city.city %></td>
         <td><%= user.ads.count %></td>
-        <td><%# user.event.count %></td>
+        <td><%= user.events.count %></td>
         <% @plans.each do |p| %>
           <th><%= user.plans.where('plan_id=?',p.id).count %></th>
         <% end %>
