--- a/app/views/layouts/_sidebar_left.html.erb
+++ b/app/views/layouts/_sidebar_left.html.erb
@@ -97,7 +97,7 @@
 <% end %>
 
 
-<% if user_signed_in? %>
+<% if user_signed_in? && (controller_name=="ads" || academy?) %>
 <!-- Painel de Filtros-->
 <div class="panel ">
   <div class="panel-heading border-header">
