--- a/app/views/admin/academy/questions/index.html.erb
+++ b/app/views/admin/academy/questions/index.html.erb
@@ -14,7 +14,7 @@
   <tr>
     <th>ID</th>
     <th>Pergunta</th>
-    <th>ID Autor</th>
+    <th>Autor</th>
     <th>Categoria</th>
     <th>Respostas</th>
     <th>Criado em</th>
@@ -27,7 +27,7 @@
   <tr>
     <td><%= admin_academy_question.id %></td>
     <td><%= admin_academy_question.title %></td>
-    <td><%= admin_academy_question.user_id %></td>
+    <td><%= admin_academy_question.user_id %>/<%= admin_academy_question.user.name %></td>
     <td>
       <% if admin_academy_question.category %>
       <span class="label" style="background-color: #<%= admin_academy_question.category.color %>">
