--- a/app/views/admin/academy/workshops/show.html.erb
+++ b/app/views/admin/academy/workshops/show.html.erb
@@ -6,6 +6,11 @@
 </p>
 
 <p>
+  <strong>Descrição:</strong>
+  <%= @admin_academy_workshop.description.html_safe %>
+</p>
+
+<p>
   <strong>Local:</strong>
   <%= @admin_academy_workshop.local %>
 </p>
