--- a/app/views/academy/workshops/index.html.erb
+++ b/app/views/academy/workshops/index.html.erb
@@ -33,7 +33,7 @@
               </div>
             </td>
             <td style="vertical-align:middle;" onmouseover="this.style.cursor='pointer'" onclick="document.location='<%= academy_workshop_path(academy_workshop.id) %>'"><%= academy_workshop.title %></td>
-            <td style="vertical-align:middle;" onmouseover="this.style.cursor='pointer'" onclick="document.location='<%= academy_workshop_path(academy_workshop.id) %>'"><%= academy_workshop.description %></td>
+            <td style="vertical-align:middle;" onmouseover="this.style.cursor='pointer'" onclick="document.location='<%= academy_workshop_path(academy_workshop.id) %>'"><%= academy_workshop.description.html_safe %></td>
             <td style="vertical-align:middle;" onmouseover="this.style.cursor='pointer'" onclick="document.location='<%= academy_workshop_path(academy_workshop.id) %>'"><%= academy_workshop.local %></td>
             <td style="vertical-align:middle;" onmouseover="this.style.cursor='pointer'" onclick="document.location='<%= academy_workshop_path(academy_workshop.id) %>'"><%= academy_workshop.date.strftime('%d-%m-%Y %H:%M') %></td>
           </tr>
