--- a/app/assets/stylesheets/ads.css
+++ b/app/assets/stylesheets/ads.css
@@ -99,16 +99,16 @@ body {
     display: inline-block;
 }
 
-.ads_title{
+.ads_title {
 	font-size: 24px;
-    margin-top: 0;
+    margin-bottom: 5px;
 }
 
-.ads_metainfo{
+.ads_metainfo {
 	border-top: 1px solid #eee;
 	border-bottom: 1px solid #eee;
-	padding: 10px 0;
-	margin: 15px 0;
+	padding: 10px 0 5px 0;
+	margin: 10px 0 10px 0;
 }
 
 .header_tab{
