--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -6,17 +6,11 @@
 <% end %>
 
 
-<ol class="breadcrumb" id="breadcrumbAds">
+<ol class="breadcrumb" id="breadcrumbAds" style="border: 1px solid #dddddd;">
   <li class="active">
-    <a class="url" href="<%= ads_path %>"><i class="fa fa-tags"></i> Anúncios</a>
-    <a class="url" href="<%= ad_path(@ad.id) %>"> > <%= @ad.title %></a>
+    <i class="fa fa-tags"></i> <a class="url" href="<%= ads_path %>"> Anúncios</a> >
+    <a class="url" href="<%= ad_path(@ad.id) %>"> <%= @ad.title %></a>
   </li>
-  <div style="float:right">
-    <% if user_signed_in? && current_user.id == @ad.user_id %>
-          <%= link_to '<i class="fa fa-edit"></i>Editar '.html_safe, edit_ad_path(@ad), class:'no-effect', :tile=> "Editar Anúncio" %>
-          <%= link_to '<i class="fa fa-trash-o"></i>Eliminar '.html_safe, @ad, class:'no-effect', method: :delete, data: { confirm: 'Tem a certeza que quer apagar o seu anúncio ?' } ,:tile=> "Apagar Anúncio"%>
-    <% end %>
-  </div>
 </ol>
 
 
@@ -49,7 +43,7 @@
 
 <% num_img=@ad.ad_images.count %>
 <section class="panel">
-   <div class="panel-body">
+   <div class="panel-body" style="margin:10px 10px 10px 10px;">
       <div class="col-md-6">
         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
           <!-- Indicators -->
@@ -69,7 +63,6 @@
 
           <!-- Wrapper for slides -->
           <div class="carousel-inner">
-
             <% if num_img == 0 %>
               <div class="item active" id="divImg">
                 <img src="/assets/defaultAdPic.png" alt="...">
@@ -101,33 +94,38 @@
             </a>
           <% end %>
         </div>
-
-
       </div>
+
       <!-- Information ADS -->
       <div class="col-md-6">
-         <h4 class = "ads_title">
+        <div style="width: 100%; margin: 5px 0 5px 0; display: inline-block; vertical-align: middle;">
+          <!--DAR DESTAQUE-->
+          <% if @ad.category.blank? %>
+            <span class="label" style="background-color: #888888">Sem categoria</span>
+          <% else %>
+            <span class="label" style="background-color: #<%= @ad.category.color %>">
+              <%= @ad.category.name %>
+            </span>
+          <% end %>
+          <div style="float:right; height: 30px; vertical-align: middle;">
+            <% if user_signed_in? && current_user.id == @ad.user_id %>
+              <%= link_to '<i class="fa fa-edit"></i>Editar '.html_safe, edit_ad_path(@ad), class:'no-effect', :tile=> "Editar Anúncio" %>
+              <%= link_to '<i class="fa fa-trash-o"></i>Eliminar '.html_safe, @ad, class:'no-effect', method: :delete, data: { confirm: 'Tem a certeza que quer apagar o seu anúncio ?' } ,:tile=> "Apagar Anúncio"%>
+            <% end %>
+          </div>
+        </div>
+        <div class="ads_title">
+          <h4>
             <%= @ad.title %>
-         </h4>
-         <!--DAR DESTAQUE-->
-           <div class="pull-right">
-              <% if user_signed_in? && current_user.id == @ad.user_id %>
-                    <%= link_to '<i class="fa  fa-star"></i>Destacar '.html_safe, promove_ad_payment_path(@ad.id), :class=>"btn btn-success btn-sm ",:rel=>"tooltip_down",:title=>"Pode destacar o anúncio para ele ser mais visto!!" %>
-              <% end %>
-            </div>
-
-         <br/>
+          </h4>
+          <div style="float:right">
+            <% if user_signed_in? && current_user.id == @ad.user_id %>
+              <%= link_to '<i class="fa fa-star"></i>Destacar '.html_safe, promove_ad_payment_path(@ad.id), :class=>"btn btn-success btn-sm ",:rel=>"tooltip_down",:title=>"Pode destacar o anúncio para ele ser mais visto!!" %>
+            <% end %>
+          </div>
+        </div>
+         
          <div class = "ads_metainfo">
-            <p>
-               <strong>Categoria:</strong>
-               <% if @ad.category.blank? %>
-               <span class="label" style="background-color: #888888">Sem categoria</span>
-               <% else %>
-               <span class="label" style="background-color: #<%= @ad.category.color %>">
-               <%= @ad.category.name %>
-               </span>
-               <% end %>
-            </p>
             <p>
                <strong>Descricão:</strong>
                <%= @ad.description %>
