--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -3,7 +3,7 @@
 	 Poderar seguir outros utilizadores.
 <%else%>
 	 <% @elem_feed.each do | f | %>
-	 	<div class="box">
+	 	<div class="box_feed">
 	 		<div class="row">
 		 	<div class="row">
 			 	<%= link_to (image_tag f.content.user.avatar.url(:medium), :width => '40', :height => '40',:class => "img-circle pull-left"), f.content.user %>
@@ -94,14 +94,14 @@
 				<hr>
 				</div>
 				<% event = f.content %>
-				<div class="event-box"><!--class="col-md-6">-->
+				<div class="event-box_feed"><!--class="col-md-6">-->
 			        <div class="well well-sm">
 			          <div class="row" style="height:100%;">
 			            <div class="col-xs-3 col-md-3 text-center" id="event-image">
 			            <%= link_to event_image( event.image ), event ,:class=>"img-rounded img-responsive" %>
 			            </div>
 
-			            <div class="col-xs-9 col-md-9 section-box">
+			            <div class="col-xs-9 col-md-9 section-box_feed">
 			              
 			              <div id="event-title">
 			                  <%= link_to event.title, event, class:"h2 url" %>
