[Update] Editar Perfil

--- a/app/views/layouts/userslayouts.html.erb
+++ b/app/views/layouts/userslayouts.html.erb
@@ -6,7 +6,9 @@
   <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
 
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application","user" "data-turbolinks-track" => true %>  
+  <%= javascript_include_tag "jquery","jquery_ujs","jquery.fancybox","lib/jquery.pnotify.js","lib/jquery.validate.min","lib/jquery.tablesorter","lib/bootstrap-typeahead.min","bootstrap","select2","bootstrap-datepicker", "validations","user"%>  
+
+
   <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Quicksand:400,700' rel='stylesheet' type='text/css'>
 
