--- a/app/views/layouts/userslayouts.html.erb
+++ b/app/views/layouts/userslayouts.html.erb
@@ -6,7 +6,7 @@
   <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
 
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application","user" "data-turbolinks-track" => true %>  
+  <%= javascript_include_tag "application", media: "all", "data-turbolinks-track" => true %>  
   <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Quicksand:400,700' rel='stylesheet' type='text/css'>
 
