[Bug Fix] #2247 message popup: close button

--- a/app/views/messages/_form_mp.html.erb
+++ b/app/views/messages/_form_mp.html.erb
@@ -14,7 +14,7 @@
     <% end %>
    
     <div class="field">
-      <%= m.label :text %><br>
+      <%= m.label :text, "Mensagem:" %><br>
       <%= m.text_area :text,:id => "text_comment",:rows=>5,:class=> "form-control counted" ,:placeholder => "Escreve a tua mensagem"%>
       <h6 class="pull-right" id="counter">144 characteres livres</h6>
     </div>
@@ -26,8 +26,8 @@
     <div class="field">
       <%= m.hidden_field :path, :value => path,:readonly => true %>
     </div>
-    
 
+    <button type="button" data-dismiss="modal" class="btn btn-default">Cancelar</button>
     <button class="btn btn-info" type="submit" id="cenas">Enviar</button>
 
   <% end %>
