--- a/app/assets/javascripts/bootstrap-wysihtml5/core.js.erb
+++ b/app/assets/javascripts/bootstrap-wysihtml5/core.js.erb
@@ -461,7 +461,7 @@
     var locale = $.fn.wysihtml5.locale = {
         en: {
             font_styles: {
-                normal: "Normal text",
+                normal: "Texto Normal",
                 h1: "Heading 1",
                 h2: "Heading 2",
                 h3: "Heading 3",
@@ -470,27 +470,27 @@
                 h6: "Heading 6"
             },
             emphasis: {
-                bold: "Bold",
-                italic: "Italic",
-                underline: "Underline"
+                bold: "Negrito",
+                italic: "Itálico",
+                underline: "Sublinhado"
             },
             lists: {
-                unordered: "Unordered list",
-                ordered: "Ordered list",
+                unordered: "Lista",
+                ordered: "Lista numerada",
                 outdent: "Outdent",
                 indent: "Indent"
             },
             link: {
-                insert: "Insert link",
-                cancel: "Cancel",
-                target: "Open link in new window"
+                insert: "Inserir link",
+                cancel: "Cancelar",
+                target: "Abrir endereço numa nova janela"
             },
             image: {
-                insert: "Insert image",
-                cancel: "Cancel"
+                insert: "Inserir imagem",
+                cancel: "Cancelar"
             },
             html: {
-                edit: "Edit HTML"
+                edit: "Editar HTML"
             },
             colours: {
                 black: "Black",
