--- a/app/views/academy/tutorials/_form.html.erb
+++ b/app/views/academy/tutorials/_form.html.erb
@@ -36,7 +36,7 @@
     <%= f.hidden_field :aproved %>
 
       <div class="control-group" style="margin-bottom: 20px;">
-        <%= f.label :rapid_description, "Processo" ,:class=>"control-label" %><label class="help-inline" style="margin-left:10px" generated="true" for="academy_tutorial_rapid_description"></label>
+        <%= f.label :rapid_description, "Processo" ,:class=>"control-label" %><label class="help-inline" style="margin-left:10px" generated="true" for="academy_tutorial_text"></label>
         <div class="controls">
           <%= f.text_area :text,id:"text_tutorial",:placeholder => "Especifique todo o processo aqui...",:rows => "10",:id => "some-textarea",:class=>"form-control", :rel=>"tooltip",:title=>"Escreva de forma clara e não utilize demasiada pontuação ou termos repetidos." %>
         </div>
