[DESIGN FEATURE]CSS - Mercado[Hélder Abreu]

--- a/app/views/academy/questions/show.html.erb
+++ b/app/views/academy/questions/show.html.erb
@@ -88,6 +88,6 @@
 <%#  Back button for unloged users   %>
 <% unless user_signed_in? %>
 <div class="col-lg-12">
-  <%= link_to '<span class="icon-arrow-left" style="margin-right: 5px;"></span>Voltar'.html_safe, academy_questions_path, class: "btn btn-primary"%>
+  <%= link_to '<span class="icon-arrow-left" style="margin-right: 5px; color:white;"></span>Voltar'.html_safe, academy_questions_path, class: "btn btn-primary"%>
 </div>
 <% end %>
