--- a/app/assets/stylesheets/ads.css
+++ b/app/assets/stylesheets/ads.css
@@ -347,3 +347,23 @@ border-radius: 4px 4px 0 0;
 	opacity:0.7;
 }
 
+/* ------ FOOTER ------- */
+#buttons-market {
+	position: absolute;
+	left: 16px;
+	right: 1px;
+	bottom: 1px;
+	height: 55px;
+	width: auto;
+	border-color: #dddddd;
+}
+
+#buttons-market a {
+	height: 100%;
+	vertical-align: middle;
+	color: white !important;
+}
+
+#buttons-market div > div {
+	vertical-align: middle;
+}
