--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -118,7 +118,7 @@
           </div>
         </div>
         <div style="display:inline-block; width:100%; vertical-align:middle;">
-          <div style="float:left;">
+          <div style="float:left; max-width:250px;">
             <h4 class="ads_title">
               <%= @ad.title %>
             </h4>
@@ -142,7 +142,7 @@
                  <strong>Vendedor:</strong>
                  <%= link_to @ad.user.name, @ad.user %>
               </div>
-              <div style="float:right; text-align:right; min-width:100px;">
+              <div style="float:right; text-align:right; min-width:150px;">
                  <strong>Preço:</strong>
                  <span class="label label-info" >
                     <%= "#{@ad.price} #{@ad.price_type.name}" %>
@@ -150,29 +150,30 @@
               </div>
             </div>
             <br>
-            <div style="width:100%;">
-              <div style="width:100%; padding: 5px 0;">
+            <div style="width:100%; display: inline-block;">
+              <div style="float: left;">
+                <i class="fa fa-map-marker"></i> <%= @ad.location %>
+              </div>
+              <div style="float:right; text-align:right; min-width:100px;">
                  <strong>Termina em:</strong>
                  <%= (@ad.created_at + 1.week).strftime("%d - %m - %Y") %>
               </div>
-              <div style="float:right; text-align:right; min-width:100px;">
-                 <strong>Localização:</strong>
-                 <%= @ad.location %>
-              </div>
             </div>
             <br>
-            <div class="fb-share-button sharebutton" data-href="http://teste94.di.uminho.pt/" data-type="button">
-            </div>
-            <div class="sharebutton">
-               <a href="https://twitter.com/share" class="twitter-share-button" data-count="none">Tweet</a>
+            <div style="width: 100%; text-align: right; margin-top: 10px;">
+              <div class="fb-share-button sharebutton" data-href="http://teste94.di.uminho.pt/" data-type="button">
+              </div>
+              <div class="sharebutton">
+                 <a href="https://twitter.com/share" class="twitter-share-button" data-count="none">Tweet</a>
+              </div>
             </div>
          </div>
       </div>
    </div>
 </section>
-<section class="panel" style="background-color: rgba(255, 255, 255, 0);">
+<section class="panel" style="background-color: rgba(255, 255, 255, 0); border: 1px solid #dddddd;">
    <header class="header header_tab">
-      <ul class="nav nav-tabs">
+      <ul class="nav nav-tabs" style="border-bottom: 1px solid #dddddd;">
          <li class="active">
             <a data-toggle="tab" href="#related" id="extraNavButton">
             Produtos na mesma Area
@@ -190,23 +191,23 @@
          </li>
       </ul>
    </header>
-   <div class="panel-body">
+   <div class="panel-body" style="margin-top:10px;">
    <div class="tab-content tasi-tab">
       <!-- produtos relacionados -->
-      <div id="related" class="tab-pane active">
-         <div class="row ads_index_section">
+      <div id="related" class="tab-pane active" style="margin:0; padding: 0;">
+         <div class="row ads_index_section" style="margin:0; padding: 0;">
             <%= render :partial => @related_ads %>
          </div>
       </div>
       <!-- ultimos visitados -->
-      <div id="last_viewed" class="tab-pane">
-         <div class="row ads_index_section">
+      <div id="last_viewed" class="tab-pane" style="margin:0; padding: 0;">
+         <div class="row ads_index_section" style="margin:0; padding: 0;">
             <%= render :partial => @last_viewed %>
          </div>
          <!-- </div> -->
       </div>
       <!-- reviews -->
-      <div id="reviews" class="tab-pane" style="background-color: white;">
+      <div id="reviews" class="tab-pane" style="background-color: white; margin:0; padding: 0;">
          <% @reviews_user.each do |review| %>
          <article class="media">
             <p class="pull-left thumb p-thumb">
@@ -228,13 +229,13 @@
  
 <section class="panel">
     <div class="panel-heading border-header">
-            <h3 class="panel-title">Mensagens</h3>
-        </div>
+      <h3 class="panel-title">Mensagens</h3>
+    </div>
    <div class="panel-body  panel_without_bg">
       <% if user_signed_in? %>
-      <div id="messages">
-         <%= render "messages/messages_ads" %>
-      </div>
+        <div id="messages">
+           <%= render "messages/messages_ads" %>
+        </div>
       <% end %>
    </div>
 </section>
@@ -242,6 +243,6 @@
 
 <div class="fields">
   <button type="button" class="btn btn-primary" onclick="location.href='<%= ads_path %>'">
-    <span class="icon-arrow-left" style="margin-right: 5px;"></span>Voltar
+    <span class="icon-arrow-left" style="margin-right: 5px; color: white;"></span>Voltar
   </button>
 </div>
