--- a/app/views/users/myads.html.erb
+++ b/app/views/users/myads.html.erb
@@ -1,9 +1,10 @@
 
-  <ol class="breadcrumb" id="breadcrumbAds">
+  <ol class="breadcrumb" id="breadcrumbAds" style="border: 1px solid #dddddd;">
     <li class="active">
-      <a class="url" href="<%= ads_path %>"><i class="fa fa-tags"></i>Anúncios</a></li>
+      <i class="fa fa-tags"></i> <a class="url" href="<%= ads_path %>">Anúncios</a> >
+    </li>
       <% if user_signed_in? %>
-        <a class="url" href="<%= myads_user_path(current_user.id) %>"> > Os meus anúncios</a></li>
+        <a class="url" href="<%= myads_user_path(current_user.id) %>"> Os meus anúncios</a>
         <%= link_to "<i class='fa fa-plus'></i>Novo Anúncio".html_safe, new_ad_path, class:"url", style:"float:right" %>
       <% end %>
   </ol>
