[Bug fix] edit events, tutorials, workshops in Admin_Zone

--- a/app/views/admin/academy/questions/show.html.erb
+++ b/app/views/admin/academy/questions/show.html.erb
@@ -33,5 +33,5 @@
 </p>
 
 
-<%= link_to 'Editar', edit_admin_academy_question_path(@admin_academy_question) %> |
+<%# link_to 'Editar', edit_admin_academy_question_path(@admin_academy_question) %>
 <%= link_to 'Voltar', admin_academy_questions_path %>
