--- a/app/views/admin/academy/workshops/show.html.erb
+++ b/app/views/admin/academy/workshops/show.html.erb
@@ -44,5 +44,5 @@
 
 
 
-<%= link_to 'Editar', edit_admin_academy_workshop_path(@admin_academy_workshop) %> |
+<%# link_to 'Editar', edit_admin_academy_workshop_path(@admin_academy_workshop) %>
 <%= link_to 'Voltar', admin_academy_workshops_path %>
