--- a/app/views/admin/event/events/show.html.erb
+++ b/app/views/admin/event/events/show.html.erb
@@ -29,5 +29,5 @@
   <strong>Aprovado:</strong>
 <% if @event_event.aproved=true %>Sim<%else%>Não<%end%></p>
 
-<%= link_to 'Editar', edit_admin_event_event_path(@event_event) %> |
+<%# link_to 'Editar', edit_admin_event_event_path(@event_event) %>
 <%= link_to 'Voltar', admin_event_events_path %>
