--- a/app/views/academy/workshops/show.html.erb
+++ b/app/views/academy/workshops/show.html.erb
@@ -68,7 +68,7 @@
 
         <% else %>
           <div class="text-center" style="margin-bottom: 10px;">
-            <%= link_to ' Desinscrever do Workshop', @academy_registed, method: :delete,:class=>"fa fa-minus demo btn btn-primary", data: { confirm: 'Are you sure?' } %>
+            <%= link_to ' Remover inscrição do Workshop', @academy_registed, method: :delete,:class=>"fa fa-minus demo btn btn-primary", data: { confirm: 'Are you sure?' } %>
           </div>
         <% end %>
 
