--- a/app/views/layouts/_header_academy_notification.html.erb
+++ b/app/views/layouts/_header_academy_notification.html.erb
@@ -10,25 +10,25 @@
 
   <ul class="dropdown-menu">
 
-    <%# notifications new answers for your questions %>
+<%# notifications new answers for your questions %>
     <% if @notifications_new_answer.length > 0 %>
       <li class="dropdown-header"><%= @notifications_new_answer.length %> Novas Respostas</li>
       <% @notifications_new_answer.each do |notification| %>
         <% question = notification.question %>
 
-         <li class="preview">
+        <li class="preview">
           <a href="<%= academy_question_path(question, :notification => notification) %>">
-                <small class="type"><%= notification.description %></small><br>
-                <span class="message"><%= question.title %></span>
-                <span class="time"><i class="icon-time"></i>4:59PM<% time_ago_in_words(notification.created_at) %></span>
-              </a>
-            </li>
-            <li class="divider"></li>
+            <small class="type"><%= notification.description %></small><br>
+            <span class="message"><%= question.title %></span>
+            <span class="time"><i class="icon-time"></i></span>
+            <abbr class="timeago" title="<%= notification.created_at.getutc.iso8601 %>"> <%= notification.created_at.to_s %> </abbr>
+          </a>
+        </li>
       <% end %>
       <li class="divider"></li>
     <% end %>
 
-        <%# notifications new answers for your questions %>
+<%# new registration in your workshop %>
     <% if @notification_acmy_new_registration.length > 0 %>
       <li class="dropdown-header"><%= @notification_acmy_new_registration.length %> Novas Inscrições</li>
       <% @notification_acmy_new_registration.each do |notification| %>
@@ -36,18 +36,16 @@
         <li class="preview">
           <a href="<%= academy_workshop_path(workshop, :notification => notification) %>">
             <small class="type"><%= notification.description %></small><br>
-            <span class="name"><%= workshop.description %></span>
-            <span class="time"><i class="icon-time"></i>4:59PM<% time_ago_in_words(notification.created_at) %></span>
+            <span class="name"><%= workshop.title %></span>
+            <span class="time"><i class="icon-time"></i></span>
+            <abbr class="timeago" title="<%= notification.created_at.getutc.iso8601 %>"> <%= notification.created_at.to_s %> </abbr>
           </a>
         </li>
       <% end %>
       <li class="divider"></li>
     <% end %>
 
-
-
-
-       <%# notifications new answers for your questions %>
+<%#  aproved event/Yworkshop/tutorial  %>
     <% if @notification_acmy_aproved.length > 0 %>
       <li class="dropdown-header"><%= @notification_acmy_aproved.length %> Aprovados</li>
       <% @notification_acmy_aproved.each do |notification| %>
@@ -56,7 +54,6 @@
           <small class="type"><%= notification.description %></small><br>
           <%= check_type_notification( notification ) %>
           <span class="time"><i class="icon-time"></i>4:59PM<% time_ago_in_words(notification.created_at) %></span>
-
         </li>
       <% end %>
       <li class="divider"></li>
@@ -65,7 +62,6 @@
     <% if @number_notifications_academy == 0 %>
       <li class="dropdown-header">Sem novas notificações na Academia</li>
     <% end %>
-
 
   </ul>
 </li>
