Incomplete pré-merge

--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -2,162 +2,14 @@
 	 Não existe atividade recente das pessoas que segue.
 	 Poderar seguir outros utilizadores.
 <%else%>
-	 <% @elem_feed.each do | f | %>
-	 	<div class="box_feed">
-	 		<div class="row">
-		 	<div class="row">
-			 	<%= link_to (image_tag f.content.user.avatar.url(:medium), :width => '40', :height => '40',:class => "img-circle pull-left"), f.content.user %>
-			 	<%= link_to f.content.user.name, f.content.user %>
-		 	 <%case f.in%>
-			 <%when 1    #ad %>
-				criou o seguinte anúncio:
-				<hr>
-				</div>
-				<% ad = f.content %>
-			    		<div id="element1">
-						    <div class="ads_index_img">
-						      <div class="thumbnail">
-						        <span class='price' ><%= ad.price %><%= ad.price_type.name %></span>
-						          <div >
-						            <%= link_to ad_image( ad.ad_images.first ), ad %>
-						          </div>
-						      </div>
-						    </div>
-					    </div>
-					    <div id="element2">
-						    <div class="panel-body text-center">
-						      <% if !ad.category.blank? %>
-						        <div class="caption">
-						          <% if ad.category.nil? %>
-						                  <span class="label pro_title" style="background-color: #888888">Desconhecido </span>
-						          <% else %>
-						                  <span class="label pro_title" style="background-color: #<%= ad.category.color %>"><%= ad.category.name %>  </span>
-						          <% end %>
-						        </div>
-						      <% end %>
-						      	<div  class="linkads" style="height:50px"><a><%= link_to ad.title, ad %></a></div>
-						      <div style="height:50px"><i class="fa fa-map-marker pro_title"></i> <%= ad.city.city unless ad.city.blank? %></div>
-						    </div>
-						</div>
-
-			 <%when 2    #question%>
-				colocou a seguinte questão:
-				<hr>
-				</div>
-				<% question = f.content %>
-				<div id="category-label" style="float:left; width:30%; text-align:left;">
-			        <span>Categoria: </span> 
-			        <span class="label" style="background-color: #<%= question.category.color %> ; color: black; font-size:12px;">
-			          <%= question.category.name %>
-			        </span>
-			    </div>
-			    <br>
-			    <h2 align="left" > 
-    			    <%= link_to question.title, question, class:"h2 url" %>
-			
-			    </h2>
-			    <br>
-
-			    <div class="col-xs-9 col-md-10 ">
-			        <%= question.text.html_safe %><%##  texto da pergunta  ##%>
-			    </div>
-			    <br>
-			    <br>
-			 <%when 3    #tutorial%>
-				têm o seguinte tutorial aprovado:
-				<hr>
-				</div>
-				<% tutorial = f.content %>
-				 <div id="category-label" style="float:left; width:30%; text-align:left;">
-			        <span>Categoria: </span> 
-			        <span class="label" style="background-color: #<%= tutorial.category.color %> ; color: black; font-size:12px;">
-			          <%= tutorial.category.name %>
-			        </span>
-			    </div>
-			    <br>
-			     <h2 align="left" > 
-			     <%= link_to tutorial.title, tutorial, class:"h2 url" %>
-			    </h2>
-			    <br>
-			    <div class="information_show_tutorial">
-			    	<p>
-		          	  <span>Descrição: </span> <%= tutorial.rapid_description %>
-		            </p>
-			    </div>
-
-			    <br>
-			    <br>
-
-
-			 <%when 4    #event%>
-				divulgou o seguinte evento:
-				<hr>
-				</div>
-				<% event = f.content %>
-				<div class="event-box_feed"><!--class="col-md-6">-->
-			        <div class="well well-sm">
-			          <div class="row" style="height:100%;">
-			            <div class="col-xs-3 col-md-3 text-center" id="event-image">
-			            <%= link_to event_image( event.image ), event ,:class=>"img-rounded img-responsive" %>
-			            </div>
-
-			            <div class="col-xs-9 col-md-9 section-box_feed">
-			              
-			              <div id="event-title">
-			                  <%= link_to event.title, event, class:"h2 url" %>
-			              </div>
-
-			              <div id="event-description">
-			                  <p><%= event.description %></p>
-			              </div>
-
-			              <hr>
-			              
-			              <div class="row rating-desc">
-			                <div class="col-md-12">
-			                  <div style="float:left">
-			                    <i class="fa fa-map-marker"></i><%= event.city.city %>
-			                  </div>
-			                  <div style="float:right">
-			                    <span class="event-begin">
-			                      <span class="fa fa-calendar" style="color:darkgreen;"></span><%=event.start_day.day %>/<%=event.start_day.mon %>/<%=event.start_day.year %>
-			                    </span>
-			                    <span>
-			                      <span class="fa fa-calendar" style="color:#d43f3a"></span><%=event.end_day.day %>/<%=event.end_day.mon %>/<%=event.end_day.year %>
-			                    </span>
-			                  </div>
-			                </div>
-			              </div>
-
-			            </div>
-			          </div>
-			        </div>
-			      </div>
-
-			 <%when 5    #WS%>
-				irá realizar o seguinte workshop:
-				<hr>
-				</div>
-				<% workshop = f.content %>
-				<br>
-			    <div class="title_show_workshop">
-			     <center><%= link_to workshop.title, workshop, class:"h2 url" %></center>
-			    </div>
-				<div class="information_data"><!--class="information_workshop">-->
-			      <div class="information_top">
-			        <div><i class="fa fa-map-marker"></i>Localidade: <%= workshop.local %></div>
-			        <div><i class="fa fa-calendar-o"></i>Data: <%= workshop.date.strftime('%d-%m-%Y %H:%M') %></div>
-			      </div>
-			      <div class="information_bottom">
-			        <div><i class="fa fa-ticket"></i>Vagas: <%= workshop.available_slots %></div>
-			        <div><i class="fa fa-unlock"></i>Inscrições: <%= workshop.slots_taken %></div>
-			        <div><i class="fa fa-money"></i>Preço: <%= workshop.price %> <i class="fa fa-eur"></i></div>
-			        <div><i class="fa fa-list-alt"></i>Mínimo de Inscrições: <%= workshop.requires_registration %></div>
-			      </div>
-			    </div>
-			 <%end%>
-			</div>
+	 	<div class="box_feed" id="feeds">
+  <%= render "elem_feed" %>
 		 </div>
-	 <%end%>
 	
+  <div href="<% if @feeds.next_page %><%= feed_path(:page => @feeds.next_page) %><% else %>#<% end %>" class='load-more-feeds'>
+    <% if @feeds.next_page %>
+      A buscar mais feeds
+    <% else %>
+    <% end %>
+  </div>
 <% end %>
