[Bug Fix] #2263 error sintact

--- a/app/views/event/events/_form.html.erb
+++ b/app/views/event/events/_form.html.erb
@@ -47,7 +47,7 @@
     </div>
 
     <p style="padding-bottom: 10px;">
-      <%= f.label :image %><br />
+      <%= f.label :image, "Imagem" %><br />
       <%= f.file_field :image %>
     </p>
 
