[Fix] Admin zone minor fixes

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -24,7 +24,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <%= link_to "AgroSocial-<small>admin zone</small>".html_safe, admin_dashboard_index_path ,:class=>"navbar-brand"%>
+          <%= link_to "AgroSocial-<small>Administração</small>".html_safe, admin_dashboard_index_path ,:class=>"navbar-brand"%>
           
         </div>
 
@@ -87,7 +87,7 @@
 
          <li>
           <a href="/" class="nav-header" >
-            <i class="fa fa-reply"></i> User-zone</a>
+            <i class="fa fa-reply"></i> Voltar </a>
           </li>
 
         </ul>
