--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -33,8 +33,8 @@
         <td><%= user.name %></td>
         <td><%= user.email %></td>
         <td><%= user.city.city %></td>
-        <td><%= user.ads.count %></td>
-        <td><%= user.events.count %></td>
+        <td><%= user.counter_ads %></td>
+        <td><%= user.counter_events %></td>
         <% @plans.each do |p| %>
           <th><%= user.plans.where('plan_id=?',p.id).count %></th>
         <% end %>
